# skeltools

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  homotopic-centerlines.cpp  local-connectivity.cpp  map-medial-thickness-to-boundary.cpp
include/: config.h  experiment.h  flux.h  flux.hxx  homotopic.h  itkAOFAnchoredMedialCurveImageFilter.h  itkAOFAnchoredMedialCurveImageFilter.hxx  itkAOFAnchoredMedialSurfaceImageFilter.h  itkAOFAnchoredMedialSurfaceImageFilter.hxx  itkAOFAnchoredSkeletonImageFilterBase.h  itkAOFAnchoredSkeletonImageFilterBase.hxx  itkAverageOutwardFluxImageFilter.h  itkAverageOutwardFluxImageFilter.hxx  itkHomotopicThinningImageFilter.h  itkHomotopicThinningImageFilter.hxx  itkLocalConnectivityImageFilter.h  itkLocalConnectivityImageFilter.hxx  itkMapToBoundaryImageFilter.h  itkMapToBoundaryImageFilter.hxx  itkMedialCurveImageFilter.h  itkMedialCurveImageFilter.hxx  itkMedialSurfaceImageFilter.h  itkMedialSurfaceImageFilter.hxx  itkOrderedSkeletonizationImageFilterBase.h  itkOrderedSkeletonizationImageFilterBase.hxx  itkSpokeFieldToAverageOutwardFluxImageFilter.h  itkSpokeFieldToAverageOutwardFluxImageFilter.hxx  medial.h  skeletonize.h  topology.h  topology.hxx  util.h  util.hxx
src/: experiment.cpp  homotopic.cpp  medial.cpp  skeletonize.cpp  topology.cpp
